@@ -57,9 +57,34 @@
 // ZAP: 2016/01/27 Prevent HostProcess from reporting progress higher than 100%
 // ZAP: 2016/04/21 Allow scanners to notify of messages sent (and tweak the progress and request count of each plugin)
 // ZAP: 2016/06/29 Allow to specify and obtain the reason why a scanner was skipped
+// ZAP: 2016/07/12 Do not allow techSet to be null
+// ZAP: 2016/07/01 Issue 2647 Support a/pscan rule configuration 
+// ZAP: 2016/09/20 - Reorder statements to prevent (potential) NullPointerException in scanSingleNode
+//                 - JavaDoc tweaks
+// ZAP: 2016/11/14 Restore and deprecate old constructor, to keep binary compatibility
+// ZAP: 2016/12/13 Issue 2951:  Support active scan rule and scan max duration
+// ZAP: 2016/12/20 Include the name of the user when logging the scan info
+// ZAP: 2017/03/20 Improve node enumeration in pre-scan phase.
+// ZAP: 2017/03/20 Log the number of messages sent by the scanners, when finished.
+// ZAP: 2017/03/25 Ensure messages to be scanned have a response.
+// ZAP: 2017/06/07 Scan just one node with AbstractHostPlugin (they apply to the whole host not individual messages).
+// ZAP: 2017/06/08 Collect messages to be scanned.
+// ZAP: 2017/06/15 Initialise the plugin factory immediately after starting the scan.
+// ZAP: 2017/06/15 Do not start following plugin if the scanner is paused.
+// ZAP: 2017/06/20 Log number of alerts raised by each scanner.
+// ZAP: 2017/07/06 Expose plugin stats.
+// ZAP: 2017/07/12 Tweak the method used when initialising the PluginFactory.
+// ZAP: 2017/07/13 Automatically skip dependent scanners (Issue 3784)
+// ZAP: 2017/07/18 Allow to obtain the (total) alert count.
+// ZAP: 2017/09/27 Allow to skip scanners by ID and don't allow to skip scanners already finished/skipped.
+// ZAP: 2017/10/05 Replace usage of Class.newInstance (deprecated in Java 9).
+// ZAP: 2017/11/29 Skip plugins if there's nothing to scan.
+// ZAP: 2017/12/29 Provide means to validate the redirections.
+// ZAP: 2018/01/01 Update initialisation of PluginStats.
 
 package org.parosproxy.paros.core.scanner;
 
+import java.io.IOException;
 import java.text.DecimalFormat;
 import java.util.ArrayList;
 import java.util.HashMap;
@@ -68,6 +93,7 @@ import java.util.Iterator;
 import java.util.List;
 import java.util.Map;
 import java.util.Set;
+import java.util.concurrent.TimeUnit;
 
 import org.apache.log4j.Logger;
 import org.parosproxy.paros.Constant;
@@ -75,12 +101,17 @@ import org.parosproxy.paros.common.ThreadPool;
 import org.parosproxy.paros.db.DatabaseException;
 import org.parosproxy.paros.model.HistoryReference;
 import org.parosproxy.paros.network.ConnectionParam;
+import org.parosproxy.paros.network.HttpMalformedHeaderException;
 import org.parosproxy.paros.network.HttpMessage;
 import org.parosproxy.paros.network.HttpSender;
 import org.zaproxy.zap.extension.ascan.ScanPolicy;
+import org.zaproxy.zap.extension.ruleconfig.RuleConfig;
+import org.zaproxy.zap.extension.ruleconfig.RuleConfigParam;
 import org.zaproxy.zap.model.SessionStructure;
 import org.zaproxy.zap.model.StructuralNode;
 import org.zaproxy.zap.model.TechSet;
+import org.zaproxy.zap.network.HttpRedirectionValidator;
+import org.zaproxy.zap.network.HttpRequestConfig;
 import org.zaproxy.zap.users.User;
 
 public class HostProcess implements Runnable {
@@ -99,7 +130,9 @@ public class HostProcess implements Runnable {
     private Analyser analyser = null;
     private Kb kb = null;
     private User user = null;
-    private TechSet techSet = null;
+    private TechSet techSet;
+    private RuleConfigParam ruleConfigParam;
+    private String stopReason = null;
 
     /**
      * A {@code Map} from plugin IDs to corresponding {@link PluginStats}.
@@ -112,25 +145,95 @@ public class HostProcess implements Runnable {
     // ZAP: progress related
     private int nodeInScopeCount = 0;
     private int percentage = 0;
+
+    /**
+     * The count of requests sent by the {@code HostProcess} itself.
+     */
+    private int requestCount;
+
+    /**
+     * The count of alerts raised during the scan.
+     */
+    private int alertCount;
+
+    /**
+     * The ID of the message to be scanned by {@link AbstractHostPlugin}s.
+     * <p>
+     * As opposed to {@link AbstractAppPlugin}s, {@code AbstractHostPlugin}s just require one message to scan as they run
+     * against the host (not individual messages/endpoints).
+     * 
+     * @see #messagesIdsToAppScan
+     */
+    private int messageIdToHostScan;
+
+    /**
+     * The IDs of the messages to be scanned by {@link AbstractAppPlugin}s.
+     * 
+     * @see #messageIdToHostScan
+     */
+    private List<Integer> messagesIdsToAppScan;
+
+    /**
+     * The HTTP request configuration, uses a {@link HttpRedirectionValidator} that ensures the followed redirections are in
+     * scan's scope.
+     * <p>
+     * Lazily initialised.
+     * 
+     * @see #getRedirectRequestConfig()
+     * @see #redirectionValidator
+     */
+    private HttpRequestConfig redirectRequestConfig;
+
+    /**
+     * The redirection validator that ensures the followed redirections are in scan's scope.
+     * <p>
+     * Lazily initialised.
+     * 
+     * @see #getRedirectionValidator()
+     * @see #redirectRequestConfig
+     */
+    private HttpRedirectionValidator redirectionValidator;
     
     /**
-     * Intantiate a new HostProcess service
+     * Constructs a {@code HostProcess}, with no rules' configurations.
      * 
      * @param hostAndPort the host:port value of the site that need to be processed
      * @param parentScanner the scanner instance which instantiated this process
      * @param scannerParam the session scanner parameters
      * @param connectionParam the connection parameters
-     * @param pluginFactory the Factory object for plugin management and instantiation
+     * @param scanPolicy the scan policy
+     * @deprecated Use {@link #HostProcess(String, Scanner, ScannerParam, ConnectionParam, ScanPolicy, RuleConfigParam)}
+     *             instead. It will be removed in a future version.
+     */
+    @Deprecated
+    public HostProcess(String hostAndPort, Scanner parentScanner, ScannerParam scannerParam,
+            ConnectionParam connectionParam, ScanPolicy scanPolicy) {
+        this(hostAndPort, parentScanner, scannerParam, connectionParam, scanPolicy, null);
+    }
+    
+    /**
+     * Constructs a {@code HostProcess}.
+     * 
+     * @param hostAndPort the host:port value of the site that need to be processed
+     * @param parentScanner the scanner instance which instantiated this process
+     * @param scannerParam the session scanner parameters
+     * @param connectionParam the connection parameters
+     * @param scanPolicy the scan policy
+     * @param ruleConfigParam the rules' configurations, might be {@code null}.
+     * @since 2.6.0
      */
     public HostProcess(String hostAndPort, Scanner parentScanner, 
     		ScannerParam scannerParam, ConnectionParam connectionParam, 
-    		ScanPolicy scanPolicy) {
+    		ScanPolicy scanPolicy, RuleConfigParam ruleConfigParam) {
         
         super();
         this.hostAndPort = hostAndPort;
         this.parentScanner = parentScanner;
         this.scannerParam = scannerParam;
 		this.pluginFactory = scanPolicy.getPluginFactory().clone();
+		this.ruleConfigParam = ruleConfigParam;
+		this.messageIdToHostScan = -1;
+		this.messagesIdsToAppScan = new ArrayList<>();
 		
         httpSender = new HttpSender(connectionParam, true, HttpSender.ACTIVE_SCANNER_INITIATOR);
         httpSender.setUser(this.user);
@@ -146,6 +249,7 @@ public class HostProcess implements Runnable {
         }
         
         threadPool = new ThreadPool(maxNumberOfThreads, "ZAP-ActiveScanner-");
+        this.techSet = TechSet.AllTech;
     }
 
     /**
@@ -181,21 +285,41 @@ public class HostProcess implements Runnable {
         log.debug("HostProcess.run");
 
         try {
-            TraverseCounter counter = new TraverseCounter();
             hostProcessStartTime = System.currentTimeMillis();
-            for (StructuralNode node : startNodes) {
-    	        // ZAP: before all get back the size of this scan
-    	        traverse(node, true, counter);
-    	        // ZAP: begin to analyze the scope
-    	        getAnalyser().start(node);
-            }
-            nodeInScopeCount = counter.getCount();
 
-            log.info("Scanning " + nodeInScopeCount + " node(s) from " + hostAndPort);
+            // Initialise plugin factory to report the state of the plugins ASAP.
+            pluginFactory.reset();
+            synchronized (mapPluginStats) {
+                for (Plugin plugin : pluginFactory.getPending()) {
+                    mapPluginStats.put(plugin.getId(), new PluginStats(plugin.getName()));
+                }
+            }
+
+            for (StructuralNode startNode : startNodes) {
+                traverse(startNode, true, node -> {
+                    if (canScanNode(node)) {
+                        messagesIdsToAppScan.add(node.getHistoryReference().getHistoryId());
+                    }
+                });
+
+                getAnalyser().start(startNode);
+            }
+            nodeInScopeCount = messagesIdsToAppScan.size();
+
+            if (!messagesIdsToAppScan.isEmpty()) {
+                messageIdToHostScan = messagesIdsToAppScan.get(0);
+            }
+
+            logScanInfo();
             
             Plugin plugin;
             
             while (!isStop() && pluginFactory.existPluginToRun()) {
+                checkPause();
+                if (isStop()) {
+                    break;
+                }
+
                 plugin = pluginFactory.nextPlugin();
                 
                 if (plugin != null) {
@@ -219,12 +343,42 @@ public class HostProcess implements Runnable {
         }
     }
 
-    private void processPlugin(final Plugin plugin) {
-        synchronized (mapPluginStats) {
-            mapPluginStats.put(plugin.getId(), new PluginStats());
+    /**
+     * Logs information about the scan.
+     * <p>
+     * It logs the {@link #nodeInScopeCount number of nodes} that will be scanned and the name of the {@link #user}, if any.
+     */
+    private void logScanInfo() {
+        StringBuilder strBuilder = new StringBuilder(150);
+        if (nodeInScopeCount != 0) {
+            strBuilder.append("Scanning ");
+            strBuilder.append(nodeInScopeCount);
+            strBuilder.append(" node(s) ");
+        } else {
+            strBuilder.append("No nodes to scan ");
         }
+        if (parentScanner.getJustScanInScope()) {
+            strBuilder.append("[just in scope] ");
+        }
+        strBuilder.append("from ").append(hostAndPort);
+        if (user != null) {
+            strBuilder.append(" as ");
+            strBuilder.append(user.getName());
+        }
+        if (nodeInScopeCount == 0) {
+            strBuilder.append(", skipping all plugins.");
+        }
+        log.info(strBuilder.toString());
+    }
 
-        if (techSet != null && !plugin.targets(techSet)) {
+    private void processPlugin(final Plugin plugin) {
+        mapPluginStats.get(plugin.getId()).start();
+
+        if (nodeInScopeCount == 0) {
+            pluginSkipped(plugin, Constant.messages.getString("ascan.progress.label.skipped.reason.nonodes"));
+            pluginCompleted(plugin);
+            return;
+        } else if (!plugin.targets(techSet)) {
             pluginSkipped(plugin, Constant.messages.getString("ascan.progress.label.skipped.reason.techs"));
             pluginCompleted(plugin);
             return;
@@ -233,39 +387,31 @@ public class HostProcess implements Runnable {
         log.info("start host " + hostAndPort + " | " + plugin.getCodeName()
                 + " strength " + plugin.getAttackStrength() + " threshold " + plugin.getAlertThreshold());
         
-        for (StructuralNode startNode : startNodes) {
-	        if (plugin instanceof AbstractHostPlugin) {
-	            if (!scanSingleNode(plugin, startNode)) {
-	                // Mark the plugin as as completed if it was not run so the scan process can continue as expected.
-	                // The plugin might not be run if the startNode: is not in scope, is explicitly excluded, ...
-	                pluginCompleted(plugin);
-	            }
-	            
-	        } else if (plugin instanceof AbstractAppPlugin) {
-	            try {
-	                traverse(startNode, true, new TraverseAction() {
+        if (plugin instanceof AbstractHostPlugin) {
+            checkPause();
 
-                        @Override
-                        public void apply(StructuralNode node) {
-                            log.debug("traverse: plugin=" + plugin.getName() + " url=" + node.getName());
-                            scanSingleNode(plugin, node);
-                        }
+            if (isStop() || isSkipped(plugin) || !scanMessage(plugin, messageIdToHostScan)) {
+                // Mark the plugin as completed if it was not run so the scan process can continue as expected.
+                // The plugin might not be run, for example, if there was an error reading the message form DB.
+                pluginCompleted(plugin);
+            }
 
-                        @Override
-                        public boolean isStopTraversing() {
-                            return isSkipped(plugin);
-                        }
-                    });
-	                threadPool.waitAllThreadComplete(600000);
-	            } finally {
-	                pluginCompleted(plugin);
-	            }
-	        }
+        } else if (plugin instanceof AbstractAppPlugin) {
+            try {
+                for (int messageId : messagesIdsToAppScan) {
+                    checkPause();
+
+                    if (isStop() || isSkipped(plugin)) {
+                        return;
+                    }
+
+                    scanMessage(plugin, messageId);
+                }
+                threadPool.waitAllThreadComplete(600000);
+            } finally {
+                pluginCompleted(plugin);
+            }
         }
-    }
-
-    private void traverse(StructuralNode node, TraverseAction action) {
-        this.traverse(node, false, action);
     }
 
     private void traverse(StructuralNode node, boolean incRelatedSiblings, TraverseAction action) {
@@ -278,7 +424,7 @@ public class HostProcess implements Runnable {
 
         action.apply(node);
 
-        if (!action.isStopTraversing() && parentScanner.scanChildren()) {
+        if (parentScanner.scanChildren()) {
             if (incRelatedSiblings) {
                 // Also match siblings with the same hierarchic name
                 // If we dont do this http://localhost/start might match the GET variant 
@@ -303,15 +449,11 @@ public class HostProcess implements Runnable {
         	
         	for (StructuralNode pNode : parentNodes) {
 	        	Iterator<StructuralNode> iter = pNode.getChildIterator();
-	        	while (iter.hasNext() && !isStop() && !action.isStopTraversing()) {
-	        		StructuralNode child = iter.next();
-	                // ZAP: Implement pause and resume
-	                while (parentScanner.isPaused() && !isStop()) {
-	                    Util.sleep(500);
-	                }
-	
+	        	while (iter.hasNext() && !isStop()) {
+                    checkPause();
+
 	                try {
-	                    traverse(child, action);
+	                    traverse(iter.next(), false, action);
 	                    
 	                } catch (Exception e) {
 	                    log.error(e.getMessage(), e);
@@ -326,48 +468,49 @@ public class HostProcess implements Runnable {
     }
 
     /**
-     * Create new plugin instance and run against a node
+     * Scans the message with the given ID with the given plugin.
+     * <p>
+     * It's used a new instance of the given plugin.
      *
-     * @param plugin
-     * @param node. If node == null, run for server level plugin
+     * @param plugin the scanner
+     * @param messageId the ID of the message.
      * @return {@code true} if the {@code plugin} was run, {@code false} otherwise.
      */
-    private boolean scanSingleNode(Plugin plugin, StructuralNode node) {
-        Thread thread;
+    private boolean scanMessage(Plugin plugin, int messageId) {
         Plugin test;
+        HistoryReference historyReference;
         HttpMessage msg;
-        
-        log.debug("scanSingleNode node plugin=" + plugin.getName() + " node=" + node.getName());
-
-        // do not poll for isStop here to allow every plugin to run but terminate immediately.
-        //if (isStop()) return;
 
         try {
-            if (node == null || node.getHistoryReference() == null) {
-                log.debug("scanSingleNode node or href null, returning: node=" + node);
-                return false;
-            }
-            
-            if (HistoryReference.TYPE_SCANNER == node.getHistoryReference().getHistoryType()) {
-                log.debug("Ignoring \"scanner\" type href");
-                return false;
+            historyReference = new HistoryReference(messageId, true);
+            msg = historyReference.getHttpMessage();
+        } catch (HttpMalformedHeaderException | DatabaseException e) {
+            log.warn("Failed to read message with ID [" + messageId + "], cause: " + e.getMessage());
+            return false;
+        }
+
+        try {
+            // Ensure the temporary nodes, added automatically to Sites tree, have a response.
+            // The scanners might base the logic/attacks on the state of the response (e.g. status code).
+            if (msg.getResponseHeader().isEmpty()) {
+                msg = msg.cloneRequest();
+                if (!obtainResponse(historyReference, msg)) {
+                    return false;
+                }
             }
 
-            if (!nodeInScope(node.getName())) {
-                log.debug("scanSingleNode node not in scope");
-                return false;
-            }
-            
-            msg = node.getHistoryReference().getHttpMessage();
-
-            if (msg == null) {
-                // Likely to be a temporary node
-                log.debug("scanSingleNode msg null");
-                return false;
+            if (log.isDebugEnabled()) {
+                log.debug("scanSingleNode node plugin=" + plugin.getName() + " node=" + historyReference.getURI().toString());
             }
 
-            test = plugin.getClass().newInstance();
+            test = plugin.getClass().getDeclaredConstructor().newInstance();
             test.setConfig(plugin.getConfig());
+            if (this.ruleConfigParam != null) {
+	            // Set the configuration rules
+	            for (RuleConfig rc : this.ruleConfigParam.getAllRuleConfigs()) {
+	                test.getConfig().setProperty(rc.getKey(), rc.getValue());
+	            }
+            }
             test.setDelayInMs(plugin.getDelayInMs());
             test.setDefaultAlertThreshold(plugin.getAlertThreshold());
             test.setDefaultAttackStrength(plugin.getAttackStrength());
@@ -376,10 +519,11 @@ public class HostProcess implements Runnable {
             notifyHostProgress(plugin.getName() + ": " + msg.getRequestHeader().getURI().toString());
 
         } catch (Exception e) {
-            log.error(e.getMessage() + " " + node.getName(), e);
+            log.error(e.getMessage() + " " + historyReference.getURI().toString(), e);
             return false;
         }
 
+        Thread thread;
         do {
 			if (this.isStop()) {
 				return false;
@@ -392,6 +536,61 @@ public class HostProcess implements Runnable {
         } while (thread == null);
 
         mapPluginStats.get(plugin.getId()).incProgress();
+        return true;
+    }
+
+    private boolean obtainResponse(HistoryReference hRef, HttpMessage message) {
+        try {
+            getHttpSender().sendAndReceive(message);
+            notifyNewMessage(message);
+            requestCount++;
+            return true;
+        } catch (IOException e) {
+            log.warn(
+                    "Failed to obtain the HTTP response for href [id=" + hRef.getHistoryId() + ", type=" + hRef.getHistoryType()
+                            + ", URL=" + hRef.getURI() + "]: " + e.getMessage());
+            return false;
+        }
+    }
+
+    /**
+     * Tells whether or not the scanner can scan the given node.
+     * <p>
+     * A node must not be null, must contain a valid HistoryReference and be in scope.
+     *
+     * @param node the node to be checked
+     * @return {@code true} if the node can be scanned, {@code false} otherwise.
+     */
+    private boolean canScanNode(StructuralNode node) {
+        if (node == null) {
+            if (log.isDebugEnabled()) {
+                log.debug("Ignoring null node");
+            }
+            return false;
+        }
+
+        HistoryReference hRef = node.getHistoryReference();
+        if (hRef == null) {
+            if (log.isDebugEnabled()) {
+                log.debug("Ignoring null history reference for node: " + node.getName());
+            }
+            return false;
+        }
+
+        if (HistoryReference.TYPE_SCANNER == hRef.getHistoryType()) {
+            if (log.isDebugEnabled()) {
+                log.debug("Ignoring \"scanner\" type href [id=" + hRef.getHistoryId() + ", URL=" + hRef.getURI() + "]");
+            }
+            return false;
+        }
+
+        if (!nodeInScope(node.getName())) {
+            if (log.isDebugEnabled()) {
+                log.debug("Ignoring node not in scope: " + node.getName());
+            }
+            return false;
+        }
+
         return true;
     }
 
@@ -419,9 +618,10 @@ public class HostProcess implements Runnable {
     /**
      * @deprecated (2.5.0) No longer used/needed, Plugin's progress is automatically updated/maintained by
      *             {@code HostProcess}.
+     * @param plugin unused
+     * @param value unused
      */
     @Deprecated
-    @SuppressWarnings("javadoc")
     public void setTestCurrentCount(Plugin plugin, int value) {        
         // No longer used.
     }
@@ -438,6 +638,13 @@ public class HostProcess implements Runnable {
      * @return true if the process has been stopped
      */
     public boolean isStop() {
+        if (this.scannerParam.getMaxScanDurationInMins() > 0) {
+        	if (System.currentTimeMillis() - this.hostProcessStartTime > 
+        			TimeUnit.MINUTES.toMillis(this.scannerParam.getMaxScanDurationInMins())) {
+        	    this.stopReason = Constant.messages.getString("ascan.progress.label.skipped.reason.maxScan");
+        	    this.stop();
+            }
+        }
         return (isStop || parentScanner.isStop());
     }
     
@@ -447,6 +654,12 @@ public class HostProcess implements Runnable {
      */
     public boolean isPaused() {
         return parentScanner.isPaused();
+    }
+
+    private void checkPause() {
+        while (parentScanner.isPaused() && !isStop()) {
+            Util.sleep(500);
+        }
     }
     
     public int getPercentageComplete () {
@@ -537,6 +750,22 @@ public class HostProcess implements Runnable {
 
     public void alertFound(Alert alert) {
         parentScanner.notifyAlertFound(alert);
+
+        PluginStats pluginStats = mapPluginStats.get(alert.getPluginId());
+        if (pluginStats != null) {
+            pluginStats.incAlertCount();
+        }
+        alertCount++;
+    }
+
+    /**
+     * Gets the alert count.
+     * 
+     * @return the alert count.
+     * @since 2.7.0
+     */
+    public int getAlertCount() {
+        return alertCount;
     }
 
     /**
@@ -549,6 +778,42 @@ public class HostProcess implements Runnable {
         }
         
         return analyser;
+    }
+
+    /**
+     * Gets the HTTP request configuration that ensures the followed redirections are in scan's scope.
+     *
+     * @return the HTTP request configuration, never {@code null}.
+     * @since TODO add version
+     * @see #getRedirectionValidator()
+     */
+    HttpRequestConfig getRedirectRequestConfig() {
+        if (redirectRequestConfig == null) {
+            redirectRequestConfig = HttpRequestConfig.builder().setRedirectionValidator(getRedirectionValidator()).build();
+        }
+        return redirectRequestConfig;
+    }
+
+    /**
+     * Gets the redirection validator that ensures the followed redirections are in scan's scope.
+     *
+     * @return the redirection validator, never {@code null}.
+     * @since TODO add version
+     * @see #getRedirectRequestConfig()
+     */
+    HttpRedirectionValidator getRedirectionValidator() {
+        if (redirectionValidator == null) {
+            redirectionValidator = redirection -> {
+                if (!nodeInScope(redirection.getEscapedURI())) {
+                    if (log.isDebugEnabled()) {
+                        log.debug("Skipping redirection out of scan's scope: " + redirection);
+                    }
+                    return false;
+                }
+                return true;
+            };
+        }
+        return redirectionValidator;
     }
 
     public boolean handleAntiCsrfTokens() {
@@ -568,22 +833,55 @@ public class HostProcess implements Runnable {
     }
 
     /**
+     * Skips the plugin with the given ID with the given {@code reason}.
+     * <p>
+     * Ideally the {@code reason} should be internationalised as it is shown in the GUI.
+     *
+     * @param pluginId the ID of the plugin that will be skipped.
+     * @param reason the reason why the plugin was skipped, might be {@code null}.
+     * @since 2.7.0
+     * @see #pluginSkipped(Plugin, String)
+     */
+    public void pluginSkipped(int pluginId, String reason) {
+        Plugin plugin = pluginFactory.getPlugin(pluginId);
+        if (plugin == null) {
+            return;
+        }
+
+        pluginSkipped(plugin, reason);
+    }
+
+    /**
      * Skips the given {@code plugin} with the given {@code reason}.
      * <p>
      * Ideally the {@code reason} should be internationalised as it is shown in the GUI.
      *
      * @param plugin the plugin that will be skipped, must not be {@code null}
      * @param reason the reason why the plugin was skipped, might be {@code null}
-     * @since TODO add version
+     * @since 2.6.0
      */
     public void pluginSkipped(Plugin plugin, String reason) {
-        PluginStats pluginStats = mapPluginStats.get(plugin.getId());
-        if (pluginStats == null) {
+        if (isStop()) {
             return;
         }
 
-        pluginStats.skipped();
+        PluginStats pluginStats = mapPluginStats.get(plugin.getId());
+        if (pluginStats == null || pluginStats.isSkipped() || pluginFactory.getCompleted().contains(plugin)) {
+            return;
+        }
+
+        pluginStats.skip();
         pluginStats.setSkippedReason(reason);
+
+        for (Plugin dependent : pluginFactory.getDependentPlugins(plugin)) {
+            pluginStats = mapPluginStats.get(dependent.getId());
+            if (pluginStats != null && !pluginStats.isSkipped() && !pluginFactory.getCompleted().contains(dependent)) {
+                pluginStats.skip();
+                pluginStats.setSkippedReason(
+                        Constant.messages.getString(
+                                "ascan.progress.label.skipped.reason.dependency"));
+            }
+        }
     }
 
     /**
@@ -596,10 +894,28 @@ public class HostProcess implements Runnable {
      */
     public boolean isSkipped(Plugin plugin) {
         PluginStats pluginStats = mapPluginStats.get(plugin.getId());
-        if (pluginStats == null) {
-            return false;
+
+        if (pluginStats != null && pluginStats.isSkipped()) {
+            return true;
         }
-        return pluginStats.isSkipped();
+
+        if (plugin.getTimeFinished() == null && stopReason != null) {
+            this.pluginSkipped(plugin, stopReason);
+            return true;
+        
+        } else if (this.scannerParam.getMaxRuleDurationInMins() > 0 && plugin.getTimeStarted() != null) {
+        	long endtime = System.currentTimeMillis();
+        	if (plugin.getTimeFinished() != null) {
+        		endtime = plugin.getTimeFinished().getTime();
+        	}
+        	if (endtime - plugin.getTimeStarted().getTime() > 
+        			TimeUnit.MINUTES.toMillis(this.scannerParam.getMaxRuleDurationInMins())) {
+        	    this.pluginSkipped(plugin,
+        	            Constant.messages.getString("ascan.progress.label.skipped.reason.maxRule"));
+            	return true;
+            }
+        }
+        return false;
     }
 
     /**
@@ -607,13 +923,13 @@ public class HostProcess implements Runnable {
      * 
      * @param plugin the plugin that will be checked
      * @return the reason why the given plugin was skipped, might be {@code null} if not skipped or there's no reason
-     * @since TODO add version
+     * @since 2.6.0
      * @see #isSkipped(Plugin)
      */
     public String getSkippedReason(Plugin plugin) {
         PluginStats pluginStats = mapPluginStats.get(plugin.getId());
         if (pluginStats == null) {
-            return null;
+            return stopReason;
         }
         return pluginStats.getSkippedReason();
     }
@@ -647,8 +963,10 @@ public class HostProcess implements Runnable {
         sb.append(hostAndPort).append(" | ").append(plugin.getCodeName());
         long startTimeMillis = pluginStats.getStartTime();
         long diffTimeMillis = System.currentTimeMillis() - startTimeMillis;
-        String diffTimeString = decimalFormat.format(diffTimeMillis / 1000.0) + "s";
-        sb.append(" in ").append(diffTimeString);
+        String diffTimeString = decimalFormat.format(diffTimeMillis / 1000.0);
+        sb.append(" in ").append(diffTimeString).append('s');
+        sb.append(" with ").append(pluginStats.getMessageCount()).append(" message(s) sent");
+        sb.append(" and ").append(pluginStats.getAlertCount()).append(" alert(s) raised.");
 
         // Probably too verbose evaluate 4 the future
         log.info(sb.toString());
@@ -661,8 +979,9 @@ public class HostProcess implements Runnable {
     }
 
     /**
+     * Gets the knowledge base of the current scan.
      * 
-     * @return 
+     * @return the knowledge base of the current scan, never {@code null}.
      */
     Kb getKb() {
         if (kb == null) {
@@ -690,7 +1009,7 @@ public class HostProcess implements Runnable {
 
 	/**
 	 * Set the user to scan as. If null then the current session will be used.
-	 * @param user
+	 * @param user the user to scan as
 	 */
     public void setUser(User user) {
 		this.user = user;
@@ -699,18 +1018,34 @@ public class HostProcess implements Runnable {
 		}
 	}
 
+	/**
+	 * Gets the technologies to be used in the scan.
+	 *
+	 * @return the technologies, never {@code null} (since 2.6.0)
+	 * @since 2.4.0
+	 */
 	public TechSet getTechSet() {
 		return techSet;
 	}
 
+	/**
+	 * Sets the technologies to be used in the scan.
+	 *
+	 * @param techSet the technologies to be used during the scan
+	 * @since 2.4.0
+	 * @throws IllegalArgumentException (since 2.6.0) if the given parameter is {@code null}.
+	 */
 	public void setTechSet(TechSet techSet) {
+		if (techSet == null) {
+			throw new IllegalArgumentException("Parameter techSet must not be null.");
+		}
 		this.techSet = techSet;
 	}
 	
 	/** 
      * ZAP: abstract plugin will call this method in order to invoke any extensions that have hooked into the active scanner
-     * @param msg
-     * @param plugin
+     * @param msg the message being scanned
+     * @param plugin the plugin being run
      */
     protected synchronized void performScannerHookBeforeScan(HttpMessage msg, AbstractPlugin plugin) {
 		Iterator<ScannerHook> iter = this.parentScanner.getScannerHooks().iterator();
@@ -728,8 +1063,8 @@ public class HostProcess implements Runnable {
     
     /** 
      * ZAP: abstract plugin will call this method in order to invoke any extensions that have hooked into the active scanner 
-     * @param msg
-     * @param plugin
+     * @param msg the message being scanned
+     * @param plugin the plugin being run
      */
     protected synchronized void performScannerHookAfterScan(HttpMessage msg, AbstractPlugin plugin) {
 		Iterator<ScannerHook> iter = this.parentScanner.getScannerHooks().iterator();
@@ -752,6 +1087,8 @@ public class HostProcess implements Runnable {
 	/**
 	 * @deprecated (2.5.0) No longer used/needed, Plugin's request count is automatically updated/maintained by
 	 *             {@code HostProcess}.
+     * @param pluginId the ID of the plugin
+     * @param reqCount the number of requests sent
 	 */
 	@Deprecated
 	public void setPluginRequestCount(int pluginId, int reqCount) {
@@ -784,7 +1121,7 @@ public class HostProcess implements Runnable {
      */
     public int getRequestCount() {
         synchronized (mapPluginStats) {
-            int count = getAnalyser().getRequestCount();
+            int count = requestCount + getAnalyser().getRequestCount();
             for (PluginStats stats : mapPluginStats.values()) {
                 count += stats.getMessageCount();
             }
@@ -793,10 +1130,24 @@ public class HostProcess implements Runnable {
     }
 
     /**
+     * Gets the stats of the {@code Plugin} with the given ID.
+     *
+     * @param pluginId the ID of the plugin.
+     * @return the stats of the plugin, or {@code null} if not found.
+     * @since 2.7.0
+     */
+    public PluginStats getPluginStats(int pluginId) {
+        synchronized (mapPluginStats) {
+            return mapPluginStats.get(pluginId);
+        }
+    }
+
+    /**
      * An action to be executed for each node traversed during the scan.
      *
      * @see #apply(StructuralNode)
      */
+    @FunctionalInterface
     private interface TraverseAction {
 
         /**
@@ -805,160 +1156,6 @@ public class HostProcess implements Runnable {
          * @param node the node being traversed
          */
         void apply(StructuralNode node);
-
-        /**
-         * Called after traversing a node, to know if the traversing should be stopped.
-         *
-         * @return {@code true} if the traversing should be stopped, {@code false} otherwise
-         */
-        boolean isStopTraversing();
-
-    }
-
-    /**
-     * A {@code TraverseAction} that counts the nodes traversed.
-     * 
-     * @see #getCount()
-     */
-    private static class TraverseCounter implements TraverseAction {
-
-        private int count;
-
-        /**
-         * Returns the number of nodes traversed.
-         *
-         * @return the number of nodes traversed
-         */
-        public int getCount() {
-            return count;
-        }
-
-        @Override
-        public void apply(StructuralNode node) {
-            count++;
-        }
-
-        @Override
-        public boolean isStopTraversing() {
-            return false;
-        }
-    }
-
-    /**
-     * The stats (and skip state and reason) of a {@link Plugin}, when the {@code Plugin} was started, how many messages were
-     * sent and its scan progress.
-     */
-    private static class PluginStats {
-
-        private final long startTime;
-        private int messageCount;
-        private int progress;
-        private boolean skipped;
-        private String skippedReason;
-
-        /**
-         * Constructs a {@code PluginStats}, initialising the starting time of the plugin.
-         */
-        public PluginStats() {
-            startTime = System.currentTimeMillis();
-        }
-
-        /**
-         * Tells whether or not the plugin was skipped.
-         *
-         * @return {@code true} if the plugin was skipped, {@code false} otherwise
-         * @see #skipped()
-         */
-        public boolean isSkipped() {
-            return skipped;
-        }
-
-        /**
-         * Skips the plugin.
-         *
-         * @see #isSkipped()
-         * @see #setSkippedReason(String)
-         */
-        public void skipped() {
-            this.skipped = true;
-        }
-
-        /**
-         * Gets the reason why the plugin was skipped.
-         *
-         * @param reason the reason why the plugin was skipped, might be {@code null}
-         * @see #getSkippedReason()
-         * @see #isSkipped()
-         */
-        public void setSkippedReason(String reason) {
-            this.skippedReason = reason;
-        }
-
-        /**
-         * Gets the reason why the plugin was skipped.
-         *
-         * @return the reason why the plugin was skipped, might be {@code null}
-         * @see #setSkippedReason(String)
-         * @see #isSkipped()
-         */
-        public String getSkippedReason() {
-            return skippedReason;
-        }
-
-        /**
-         * Gets the time when the plugin was started, in milliseconds.
-         *
-         * @return time when the plugin was started
-         * @see System#currentTimeMillis()
-         */
-        public long getStartTime() {
-            return startTime;
-        }
-
-        /**
-         * Gets the count of messages sent by the plugin.
-         *
-         * @return the count of messages sent
-         */
-        public int getMessageCount() {
-            return messageCount;
-        }
-
-        /**
-         * Increments the count of messages sent by the plugin.
-         * <p>
-         * Should be called when the plugin notifies that a message was sent.
-         */
-        public void incMessageCount() {
-            messageCount++;
-        }
-
-        /**
-         * Gets the scan progress of the plugin.
-         *
-         * @return the scan progress
-         */
-        public int getProgress() {
-            return progress;
-        }
-
-        /**
-         * Increments the scan progress of the plugin.
-         * <p>
-         * Should be called after scanning a message.
-         */
-        public void incProgress() {
-            this.progress++;
-        }
-
-        /**
-         * Sets the scan progress of the plugin.
-         *
-         * @param progress the progress to set
-         */
-        public void setProgress(int progress) {
-            this.progress = progress;
-        }
     }
 
 }
