@@ -24,6 +24,7 @@ import java.io.ByteArrayOutputStream;
 import java.io.File;
 import java.io.IOException;
 import java.math.BigInteger;
+import java.nio.charset.StandardCharsets;
 import java.security.KeyFactory;
 import java.security.KeyPair;
 import java.security.KeyPairGenerator;
@@ -41,13 +42,11 @@ import java.security.cert.X509Certificate;
 import java.security.interfaces.RSAPrivateKey;
 import java.security.spec.InvalidKeySpecException;
 import java.security.spec.PKCS8EncodedKeySpec;
+import java.util.Base64;
 import java.util.Calendar;
 import java.util.Date;
 import java.util.Random;
 
-import javax.xml.bind.DatatypeConverter;
-
-import org.apache.commons.codec.binary.Base64;
 import org.apache.commons.io.FileUtils;
 import org.bouncycastle.asn1.x500.X500NameBuilder;
 import org.bouncycastle.asn1.x500.style.BCStyle;
@@ -69,6 +68,34 @@ import org.parosproxy.paros.security.SslCertificateService;
  * @author MaWoKi
  */
 public class SslCertificateUtils {
+
+	/**
+	 * The token that indicates the start of the section that contains the certificate, contained in a {@code .pem} file.
+	 * 
+	 * @since 2.6.0
+	 */
+	public static final String BEGIN_CERTIFICATE_TOKEN = "-----BEGIN CERTIFICATE-----";
+
+	/**
+	 * The token that indicates the end of the section that contains the certificate, contained in a {@code .pem} file.
+	 * 
+	 * @since 2.6.0
+	 */
+	public static final String END_CERTIFICATE_TOKEN = "-----END CERTIFICATE-----";
+
+	/**
+	 * The token that indicates the start of the section that contains the private key, contained in a {@code .pem} file.
+	 * 
+	 * @since 2.6.0
+	 */
+	public static final String BEGIN_PRIVATE_KEY_TOKEN = "-----BEGIN PRIVATE KEY-----";
+
+	/**
+	 * The token that indicates the end of the section that contains the private key, contained in a {@code .pem} file.
+	 * 
+	 * @since 2.6.0
+	 */
+	public static final String END_PRIVATE_KEY_TOKEN = "-----END PRIVATE KEY-----";
 
 	private static final long DEFAULT_VALID_DAYS = 365L;
 
@@ -151,7 +178,7 @@ public class SslCertificateUtils {
 		keystore.store(baos, SslCertificateService.PASSPHRASE);
 		final byte[] bytes = baos.toByteArray();
 		baos.close();
-		return Base64.encodeBase64URLSafeString(bytes);
+		return Base64.getUrlEncoder().encodeToString(bytes);
 	}
 
 	/**
@@ -163,7 +190,7 @@ public class SslCertificateUtils {
 	 * @throws NoSuchAlgorithmException
 	 */
 	public static final KeyStore string2Keystore(String str) throws KeyStoreException, NoSuchAlgorithmException, CertificateException, IOException {
-		final byte[] bytes = Base64.decodeBase64(str);
+		final byte[] bytes = Base64.getUrlDecoder().decode(str);
 		final ByteArrayInputStream bais = new ByteArrayInputStream(bytes);
 		final KeyStore ks = KeyStore.getInstance(KeyStore.getDefaultType());
 		ks.load(bais, SslCertificateService.PASSPHRASE);
@@ -183,10 +210,55 @@ public class SslCertificateUtils {
 	 */
 	public static KeyStore pem2Keystore(File pemFile) throws IOException, CertificateException, 
 			InvalidKeySpecException, NoSuchAlgorithmException, KeyStoreException {
-		byte[] certAndKey = FileUtils.readFileToByteArray(pemFile);
-	    byte[] certBytes = parseDERFromPEM(certAndKey, "-----BEGIN CERTIFICATE-----", "-----END CERTIFICATE-----");
-	    byte[] keyBytes = parseDERFromPEM(certAndKey, "-----BEGIN PRIVATE KEY-----", "-----END PRIVATE KEY-----");
+		String certAndKey = FileUtils.readFileToString(pemFile, StandardCharsets.US_ASCII);
+	    byte[] certBytes = extractCertificate(certAndKey);
+	    byte[] keyBytes = extractPrivateKey(certAndKey);
 
+	    return pem2KeyStore(certBytes, keyBytes);
+	}
+
+	/**
+	 * Extracts the certificate from the given {@code .pem} file's contents.
+	 *
+	 * @param pem the contents of the {@code .pem} file.
+	 * @return the certificate, or empty array if the certificate was not found.
+	 * @since 2.6.0
+	 * @throws IllegalArgumentException if the certificate data is not properly {@code base64} encoded.
+	 */
+	public static byte[] extractCertificate(String pem) {
+		return parseDERFromPEM(pem, BEGIN_CERTIFICATE_TOKEN, END_CERTIFICATE_TOKEN);
+	}
+
+	/**
+	 * Extracts the private key from the given {@code .pem} file's contents.
+	 *
+	 * @param pem the contents of the {@code .pem} file.
+	 * @return the private key, or empty array if the private key was not found.
+	 * @since 2.6.0
+	 * @throws IllegalArgumentException if the private key data is not properly {@code base64} encoded.
+	 */
+	public static byte[] extractPrivateKey(String pem) {
+		return parseDERFromPEM(pem, BEGIN_PRIVATE_KEY_TOKEN, END_PRIVATE_KEY_TOKEN);
+	}
+
+	/**
+	 * Tells whether or not the given ({@code .pem} file) contents contain a section with the given begin and end tokens.
+	 *
+	 * @param contents the ({@code .pem} file) contents to check if contains the section.
+	 * @param beginToken the begin token of the section.
+	 * @param endToken the end token of the section.
+	 * @return {@code true} if the section was found, {@code false} otherwise.
+	 */
+	private static boolean containsSection(String contents, String beginToken, String endToken) {
+		int idxToken;
+		if ((idxToken = contents.indexOf(beginToken)) == -1 || contents.indexOf(endToken) < idxToken) {
+			return false;
+		}
+		return true;
+	}
+	
+	public static KeyStore pem2KeyStore(byte[] certBytes, byte[] keyBytes)
+	        throws IOException, CertificateException, InvalidKeySpecException, NoSuchAlgorithmException, KeyStoreException {
 	    X509Certificate cert = generateCertificateFromDER(certBytes);              
 	    RSAPrivateKey key  = generatePrivateKeyFromDER(keyBytes);
 	    
@@ -197,11 +269,13 @@ public class SslCertificateUtils {
 	    return keystore;
 	}
 
-	private static byte[] parseDERFromPEM(byte[] pem, String beginDelimiter, String endDelimiter) {
-	    String data = new String(pem);
-	    String[] tokens = data.split(beginDelimiter);
+	private static byte[] parseDERFromPEM(String pem, String beginDelimiter, String endDelimiter) {
+	    if (!containsSection(pem, beginDelimiter, endDelimiter)) {
+	        return new byte[0];
+	    }
+	    String[] tokens = pem.split(beginDelimiter);
 	    tokens = tokens[1].split(endDelimiter);
-	    return DatatypeConverter.parseBase64Binary(tokens[0]);        
+	    return Base64.getMimeDecoder().decode(tokens[0]);
 	}
 
 	private static RSAPrivateKey generatePrivateKeyFromDER(byte[] keyBytes) throws InvalidKeySpecException, NoSuchAlgorithmException {
